# maze

./: CHANGELOG.md  README.md  maze.cabal
app/: Main.hs  UI.hs
src/: Maze.hs
src/Maze/: Algorithms.hs  Core.hs  Types.hs  UI.hs  Utils.hs
src/Maze/Algorithms/: BinaryTree.hs  Kruskal.hs  Prim.hs  RecursiveBacktracking.hs
